--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,8 @@ body {
     border-radius: 40px;
     transition: background 0.2s, color 0.2s, transform 0.2s;
     box-shadow: 0 2px 10px #11324d18;
-    padding: 0.4rem 1.2rem;
+    padding: 0.8rem 2.2rem;
+    font-size: 1.2rem;
     text-decoration: none !important;
     display: inline-block;
     margin-top: 1rem;;
@@ -174,6 +175,11 @@ body {
     height: 100%;
 }
 
+.btn-group {
+  display: flex;
+  gap: 20px;
+}
+
 @media (max-width: 767px) {
     .hero-section {
         text-align: center;
@@ -202,4 +208,8 @@ body {
         text-align: center !important;
         align-items: center !important;
     }
+    .btn-group {
+    flex-direction: column;
+    gap: 10px;
+  }
 }
